fieldx/tests/uncompilable/1.77/unused_builder.stderr
error: method `foo` is never used
 --> tests/uncompilable/1.77/unused_builder.rs:3:1
  |
3 | #[fxstruct(builder)]
  | ^^^^^^^^^^^^^^^^^^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/uncompilable/1.77/unused_builder.rs:8:36
  |
8 |         builder(attributes_fn(deny(dead_code)))
  |                                    ^^^^^^^^^
